--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,17 @@
-#root {
+/* #root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   background-color: pink;
   
-}
+} */
 
-/* .App {
+.app {
   text-align: center;
+  height: 100vh;
 }
 
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
