--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,3 +1,66 @@
-.Navbar{
-    color: transparent; 
+
+.logo a{
+    margin-right: 550px;
+} 
+
+
+.Navbar {
+    width: 100%;
+    max-width: 100vw;
+    background: #2c4047;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 var(--side-padding);
 }
+
+.Navbar .content {
+    max-width: fit-content;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.Navbar .content .logo {
+    width: 200px;
+    margin-right: 50px;
+}
+
+.Navbar .content .links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin-left: auto;
+    flex: 1 1;
+    max-width: 650px;
+    grid-gap: 50px;
+    gap: 50px;
+}
+
+.links a {
+    color:white;
+    text-decoration: none;
+}
+
+.btn, button {
+    background: transparent;
+    border: 1px solid transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .1s ease;
+    padding: 12px 18px;
+    border-radius: 4px;
+    background: #00c98e;
+    background: #00c98e;
+    color: #fff;
+}
+
