--- a/frontend/src/Components/Register/Register.css
+++ b/frontend/src/Components/Register/Register.css
@@ -22,10 +22,10 @@
   height: 50px;
   padding: 0 15px;
   font-size: 16px;
-  border: 1px solid white;
+  border: 1px solid black;
   width: 100%;
   background: transparent;
-  color: white;
+  color: black;
 }
 
 .Register .card .footer,
