--- a/frontend/src/Components/Activity/Activity.css
+++ b/frontend/src/Components/Activity/Activity.css
@@ -1,28 +1,69 @@
+.ActivityContent{
+    background: #2c4147;
+    max-height: 100%;
+    min-height: 100%;
+}
+
+.activityButtons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    grid-gap: 20px;
+    gap: 20px;
+    margin-left: 850px;
+}
+
+.activityButtonE{
+    background-color: transparent;
+    border: 1px solid #ffab09;
+}
+
+.activityButtonS{
+    background-color: transparent;
+    border: 1px solid #4e81eb;
+}
+
+.activityButtonN{
+    background-color: transparent;
+    border: 1px solid #03c5d1;
+}
+
+.heading{
+    background-color: #2c4147;
+}
+
+h4{
+    margin-left: -180px;
+}
+
 .exerciseSummary{
-    background-color:gold;
+    background-image: linear-gradient(64.7deg,#ffab09,#ffab09);
     width: 360px;
     height: 220px;
     border-radius: 4px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 } 
 
 .sleepSummary{
-    background-color: purple;
+    background-image: linear-gradient(64.7deg,#441dfc,#4e81eb);;
     width: 360px;
     height: 220px;
     border-radius: 4px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .caloriesSummary{
-    background-color: blue; 
+    background-image: linear-gradient(64.7deg,#03c5d1,#03c5d1);; 
     width: 360px;
     height: 220px;
     border-radius: 4px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .main{
@@ -36,7 +77,7 @@
 
 
 .caloriesSmall{
-    background-color: lightgreen;
+    background-image: linear-gradient(64.7deg,#1000c9,#00c98e);;
     height: 110px;
     width: 360px;
     height: 220px;
@@ -46,7 +87,7 @@
 }
 
 .exerciseSmall{
-    background-color: grey;
+    background-image: linear-gradient(64.7deg,#8e3232,#c96d00);;
     height: 110px;
     width: 360px;
     height: 220px;
@@ -56,7 +97,7 @@
 }
 
 .sleepSmall{
-    background-color: pink;
+    background-image: linear-gradient(64.7deg,#c90000,rgba(251,112,144,0.85));;
     height: 110px;
     width: 360px;
     height: 220px;
